--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="btn btn-primary" data-toggle="modal" data-target="#Mymodal">Instructions</button> 
            </div>
            <br><br>
-           <button id="start" class="btn btn-success">Play Game</button>
+           <button id="start" class="btn btn-success" onclick="startGame()">Play Game</button>
            <br><br>
            <h4 class="btn btn-default" id="game_loaded"></h4>
            <br><br>
